--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -177,6 +177,7 @@
     <string name="whats_new_10">- Added monsters from the Bestiary 2 and NPCs from the GMG (both under monsters). Hazards are updated as well. \n- Reversed encounter order, newest first.\n- Added small intro to the encounter creator</string>
     <string name="whats_new_11">- Redesigned the app a bit. Filters should be easier to access and are more powerful.\n- Added Proficiency Without Level variant rules, Weak and Elite templates and notes to the encounter creator. \n- Added the option to filter sources. \n- Added treasures, including items from the APG, and a small random treasure generator.\n\n I also reworked the way everything is stored. Let me know, if there is something wrong with your data.</string>
     <string name="whats_new_13">- Added all items from the Advanced Player\'s Guide</string>
+    <string name="whats_new_15">- Redesigned all lists to be more compact and expandable with more information\n- Added a dark mode option for devices without native dark mode</string>
     <string name="encounter_creator_introduction_title">Small Intro</string>
     <string name="encounter_creator_introduction">Here\'s a small introduction to the encounter creator since the UI is still pretty sloppy:\n\n- Pull up the Search bar to access filters for monsters &amp; hazards (type, level, etc.)\n- Add your own monsters using +\n- Create random encounters by clicking the dice\n- Get treasure recommendations for your group by clicking the chest</string>
     <string name="updating_data">Updating Data ...</string>
