--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -179,9 +179,10 @@
     <string name="whats_new_13">- Added all items from the Advanced Player\'s Guide</string>
     <string name="whats_new_15">- Redesigned all lists to be more compact and expandable with more information\n- Added a dark mode option for devices without native dark mode</string>
     <string name="whats_new_16">- Updated the contents to include Bestiary 3 and all other published content on Archive of Nethys. If you restricted your sources, you have to enable the Bestiary 3 to see the contents.</string>
+    <string name="whats_new_18">- Fixed the bug where chaotic evil monsters were labeled as chaotic good.\n\n Just to be transparent about the future of this app; Monster Lair will not be maintained beyond the current state and content. This started as a hobby project and because there were no really good encounter builders available, but my priorities have shifted and there are great alternatives out there. Thank you for using my app and have fun playing Pathfinder! :) \n\n Cheers, Rob</string>
     <string name="encounter_creator_introduction_title">Small Intro</string>
     <string name="encounter_creator_introduction">Here\'s a small introduction to the encounter creator since the UI is still pretty sloppy:\n\n- Pull up the Search bar to access filters for monsters &amp; hazards (type, level, etc.)\n- Add your own monsters using +\n- Create random encounters by clicking the dice\n- Get treasure recommendations for your group by clicking the chest</string>
-    <string name="updating_data">Updating Data ...</string>
+    <string name="updating_data">Updating Data …</string>
 
 
     <string name="treasure_category_adventuring_gear">Adventuring Gear</string>
